syntax = "proto3";

package org.project_planton.provider.gcp.gcpgkeaddonbundle.v1;

import "org/project_planton/provider/gcp/gcpgkeaddonbundle/v1/api.proto";
import "org/project_planton/provider/gcp/provider.proto";
import "org/project_planton/provider/kubernetes/provider.proto";

//input for gcp-gke-addon-bundle stack
message GcpGkeAddonBundleStackInput {
  //target cloud-resource
  GcpGkeAddonBundle target = 1;
  //gcp-provider config
  org.project_planton.provider.gcp.GcpProviderConfig provider_config = 7;
  //kubernetes-provider config
  org.project_planton.provider.kubernetes.KubernetesProviderConfig kubernetes_provider_config = 6;
}
