syntax = "proto3";

package org.project_planton.provider.kubernetes.addon.kubernetesistio.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetesistio/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetesistio/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//kubernetes-istio
message KubernetesIstio {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesIstio'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesIstioSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesIstioStatus status = 5;
}

//kubernetes-istio status.
message KubernetesIstioStatus {
  //stack-outputs
  KubernetesIstioStackOutputs outputs = 1;
}
