syntax = "proto3";

package org.project_planton.provider.kubernetes.addon.kubernetesistio.v1;

import "org/project_planton/provider/kubernetes/kubernetesistio/v1/api.proto";
import "org/project_planton/provider/kubernetes/provider.proto";

//kubernetes-istio stack-input
message KubernetesIstioStackInput {
  //target cloud-resource
  KubernetesIstio target = 1;
  //provider-config
  org.project_planton.provider.kubernetes.KubernetesProviderConfig provider_config = 2;
}
